[REFACTORE] Moved integration tests to a dedicated folder.